--- a/MIPTpython/templates/tasks/tasks.html
+++ b/MIPTpython/templates/tasks/tasks.html
@@ -42,7 +42,7 @@
           </button>
         </h2>
 
-        <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
+        <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingOne">
           <div class="accordion-body">
             <div>Дедлайн: {{contest_deadline}}</div>
             <div><a class="link-opacity-100" href={{ contest_link }}>Ссылка на контест </a></div>
