--- a/MIPTpython/templates/index.html
+++ b/MIPTpython/templates/index.html
@@ -32,7 +32,7 @@
     <!-- Основная часть страницы -->
     <div class="container">
         <div class="main-header">
-            <h1>Добро пожаловать курс по Python!</h1> <!-- Большая надпись -->
+            <h1>Добро пожаловать на курс по Python!</h1> <!-- Большая надпись -->
             <a href="/accounts/signup" class="btn btn-secondary btn-custom">Регистрация</a> <!-- Первая кнопка -->
             <a href="/accounts/login" class="btn btn-primary btn-custom">Войти</a> <!-- Вторая кнопка -->
         </div>
