--- a/MIPTpython/templates/registration/profile.html
+++ b/MIPTpython/templates/registration/profile.html
@@ -92,12 +92,18 @@
       <div class="col">
         <label for="inputEmail4" class="form-label">Telegram <i class="bi bi-telegram"></i> </label>
         <input type="email" class="form-control" id="inputEmail4" placeholder= {{ profile.telegram }} disabled>
+      </div>
     </div>
+
+    <div class="row mt-3">
+      <div class="col">
+        <form action="{% url 'logout' %}" method="post">
+          {% csrf_token %}
+          <button type="submit" href="#" type="button" class="btn btn-danger">Выйти</button>
+        </form>
+      </div>
     </div>
-    <form action="{% url 'logout' %}" method="post">
-      {% csrf_token %}
-      <a href="#" onclick="parentNode.submit();">Log Out</a>
-    </form>
+
     
   </div>
 
