--- a/MIPTpython/templates/scores/scores.html
+++ b/MIPTpython/templates/scores/scores.html
@@ -35,7 +35,7 @@
   <body>
 
   <div class="container mt-5">
-    <table class="table">
+    <table class="table table-striped">
       <thead>
         <tr>
           <th scope="col">#</th>
@@ -67,6 +67,7 @@
           <td> {% if project_1_status == 'Accepted' %} <span class="badge rounded-pill text-bg-success">Accepted</span> </td>
           {% elif project_1_status == 'Сhecking' %} <span class="badge rounded-pill text-bg-secondary">Checking</span> </td>
           {% elif project_1_status == 'Rework' %} <span class="badge rounded-pill text-bg-warning">Rework</span> </td>
+          {% elif project_1_status == 'BLOCKED' %} <span class="badge rounded-pill text-bg-danger">Blocked</span> </td>
           {% else %} <span class="badge rounded-pill text-bg-danger">Not passed</span>
           {% endif %} 
           <td> {{ project_1_score }} </td>
@@ -75,19 +76,42 @@
           <th scope="row">3</th>
           <td>Проект 2</td>
           <td>10</td>
-          <td></td>
-          <td></td>
+          <td> {% if project_2_status == 'Accepted' %} <span class="badge rounded-pill text-bg-success">Accepted</span> </td>
+          {% elif project_2_status == 'Сhecking' %} <span class="badge rounded-pill text-bg-secondary">Checking</span> </td>
+          {% elif project_2_status == 'Rework' %} <span class="badge rounded-pill text-bg-warning">Rework</span> </td>
+          {% elif project_2_status == 'BLOCKED' %} <span class="badge rounded-pill text-bg-danger">Blocked</span> </td>
+
+          {% else %} <span class="badge rounded-pill text-bg-danger">Not passed</span>
+          {% endif %} 
+          <td> {{ project_2_score }} </td>
         </tr>
         <tr>
           <th scope="row">4</th>
           <td>Лабораторная работа по анализу данных</td>
           <td>10</td>
-          <td></td>
-          <td></td>
+          <td> {% if lab_status == 'Accepted' %} <span class="badge rounded-pill text-bg-success">Accepted</span> </td>
+          {% elif lab_status == 'Сhecking' %} <span class="badge rounded-pill text-bg-secondary">Checking</span> </td>
+          {% elif lab_status == 'BLOCKED' %} <span class="badge rounded-pill text-bg-danger">Blocked</span> </td>
+
+          {% elif lab_status == 'Rework' %} <span class="badge rounded-pill text-bg-warning">Rework</span> </td>
+          {% else %} <span class="badge rounded-pill text-bg-danger">Not passed</span>
+          {% endif %} 
+          <td> {{ lab_score }} </td>
+        </tr>
+
+        <tr>
+          <th scope="row"></th>
+          <th scope="row"></th>
+          <th scope="row"></th>
+          <th scope="row">Итоговая оценка</th>
+          <th scope="row">{{ total_score }}</th>
         </tr>
       </tbody>
     </table>
+
   </div>
+
+
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
