--- a/MIPTpython/templates/tasks/tasks.html
+++ b/MIPTpython/templates/tasks/tasks.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet">
   </head>
   <body>
     <div class="container">
@@ -37,7 +38,7 @@
       <div class="accordion-item">
                 {% if contest_published %}
         <h2 class="accordion-header" id="panelsStayOpen-headingOne">
-          <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="false" aria-controls="panelsStayOpen-collapseOne">
             Контест
           </button>
         </h2>
@@ -51,7 +52,7 @@
 
       </div>
         {% endif %}
-          {% if project_1_published %}
+      {% if project_1_info.publish %}
       <div class="accordion-item">
         <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
           <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
@@ -61,90 +62,138 @@
         <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
           <div class="accordion-body">
 
-            <div>Дедлайн сдачи проекта: {{project_1_deadline}}</div>
-            <div><a class="link-opacity-100" href={{ project_1_link }}>Описание задания </a></div>
-
-            <form action="create/" method="post">
+            <div>Дедлайн сдачи проекта: {{ project_1_info.deadline }}</div>
+            <div class="mb-2"><div><a class="link-opacity-100" href={{ project_1_info.description_link }}>Описание задания</a></div></div>
+            
+            
+            {% if project_1_passed %}
+            <div><form action="create_1/" method="post">
               {% csrf_token %}
-              {% if project_1_passed %}
               <div class="row">
                   <div class="col">
-                      <input type="text" class="form-control"  name="name" placeholder="Введите ссылку">
+                      <input type="text" class="form-control"  name="link_1" placeholder="Введите ссылку">
                   </div>
                   <div class="col-auto">
                       <!-- <button type="button" class="btn btn-danger">Удалить</button> -->
                       <button type="submit" class="btn btn-primary ms-2">Сохранить</button>
                   </div>
               </div>
+            </form></div>
               {% else %}
-              <fieldset disabled> <div class="row">
-                <div class="col">
-                    <input type="text" class="form-control"  name="name" placeholder= {{ project_1_response_link }}>
-                </div>
-                <div class="col-auto">
-                    <!-- <button type="button" class="btn btn-danger">Удалить</button>
-                    <button type="submit" class="btn btn-primary ms-2">Сохранить</button> -->
-                </div> </fieldset>
-              
-
+            <div><form action="update_field_1/" method="post">
+                {% csrf_token %}
+                <fieldset> <div class="row">
+                  <div class="col">
+                      <input type="text" class="form-control"  name="link_1" placeholder= {{ project_1.link }} disabled>
+                  </div>
+                  {% if project_1.status == "Rework" %}
+                  <div class="col-auto">
+                    <button type="submit" class="btn btn-primary ms-2">Пересдать</button>
+                  </div>
+                  {% endif %}
+                </fieldset>
+            </form></div>
               {% endif %}
-          </form>
           </div>
         </div>
       </div>
          {% endif %}
-         {% if project_2_published %}
-      <div class="accordion-item">
-        <h2 class="accordion-header" id="panelsStayOpen-headingThree">
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
-           Проект 2
-          </button>
-        </h2>
-        <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingThree">
-          <div class="accordion-body">
-            <div>Дедлайн сдачи проекта: {{project_2_deadline}}</div>
-            <div><a class="link-opacity-100" href={{ project_2_link }}>Описание задания </a></div>
-            <form>
-              <div class="row">
-                  <div class="col">
-                      <input type="text" class="form-control" placeholder="Введите ссылку">
-                  </div>
-                  <div class="col-auto">
-                      <button type="button" class="btn btn-danger">Удалить</button>
-                      <button type="submit" class="btn btn-primary ms-2">Сохранить</button>
-                  </div>
-              </div>
-          </form>
+
+         {% if project_2_info.publish %}
+         <div class="accordion-item">
+           <h2 class="accordion-header" id="panelsStayOpen-headingTwo2">
+             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo2" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo2">
+               Проект 2
+             </button>
+           </h2>
+           <div id="panelsStayOpen-collapseTwo2" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo2">
+             <div class="accordion-body">
+   
+               <div>Дедлайн сдачи проекта: {{ project_2_info.deadline }}</div>
+               <div class="mb-2"><div><a class="link-opacity-100" href={{ project_2_info.description_link }}>Описание задания</a></div></div>
+               
+               
+               {% if project_2_passed %}
+               <div><form action="create_2/" method="post">
+                 {% csrf_token %}
+                 <div class="row">
+                     <div class="col">
+                         <input type="text" class="form-control"  name="link_2" placeholder="Введите ссылку">
+                     </div>
+                     <div class="col-auto">
+                         <!-- <button type="button" class="btn btn-danger">Удалить</button> -->
+                         <button type="submit" class="btn btn-primary ms-2">Сохранить</button>
+                     </div>
+                 </div>
+               </form></div>
+                 {% else %}
+               <div><form action="update_field_2/" method="post">
+                   {% csrf_token %}
+                   <fieldset> <div class="row">
+                     <div class="col">
+                         <input type="text" class="form-control"  name="link_2" placeholder= {{ project_2.link }} disabled>
+                     </div>
+                     {% if project_2.status == "Rework" %}
+                     <div class="col-auto">
+                       <button type="submit" class="btn btn-primary ms-2">Пересдать</button>
+                     </div>
+                     {% endif %}
+                   </fieldset>
+               </form></div>
+                 {% endif %}
+             </div>
+           </div>
+         </div>
+        {% endif %}
+
+     
+
+        {% if project_lab_info.publish %}
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="panelsStayOpen-headingTwo3">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo3" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo3">
+              Лабораторная работа по анализу данных
+            </button>
+          </h2>
+          <div id="panelsStayOpen-collapseTwo3" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo3">
+            <div class="accordion-body">
+  
+              <div>Дедлайн сдачи проекта: {{ project_lab_info.deadline }}</div>
+              <div class="mb-2"><div><a class="link-opacity-100" href={{ project_lab_info.description_link }}>Описание задания</a></div></div>
+              
+              
+              {% if project_lab_passed %}
+              <div><form action="create_lab/" method="post">
+                {% csrf_token %}
+                <div class="row">
+                    <div class="col">
+                        <input type="text" class="form-control"  name="link_lab" placeholder="Введите ссылку">
+                    </div>
+                    <div class="col-auto">
+                        <!-- <button type="button" class="btn btn-danger">Удалить</button> -->
+                        <button type="submit" class="btn btn-primary ms-2">Сохранить</button>
+                    </div>
+                </div>
+              </form></div>
+                {% else %}
+              <div><form action="update_field_lab/" method="post">
+                  {% csrf_token %}
+                  <fieldset> <div class="row">
+                    <div class="col">
+                        <input type="text" class="form-control"  name="link_lab" placeholder= {{ project_lab.link }} disabled>
+                    </div>
+                    {% if project_lab.status == "Rework" %}
+                    <div class="col-auto">
+                      <button type="submit" class="btn btn-primary ms-2">Пересдать</button>
+                    </div>
+                    {% endif %}
+                  </fieldset>
+              </form></div>
+                {% endif %}
+            </div>
           </div>
         </div>
-      </div>
-      {% endif %}
-
-      {% if lab_published %}
-      <div class="accordion-item">
-        <h2 class="accordion-header" id="panelsStayOpen-headingThree">
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseFour" aria-expanded="false" aria-controls="panelsStayOpen-collapseFour">
-           Лабораторная работа по анализу данных
-          </button>
-        </h2>
-        <div id="panelsStayOpen-collapseFour" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingFour">
-          <div class="accordion-body">
-            <div>Дедлайн сдачи лабораторной работы: {{lab_deadline}}</div>
-            <div><a class="link-opacity-100" href={{ lab_link }}>Описание задания </a></div>
-            <form>
-              <div class="row">
-                  <div class="col">
-                      <input type="text" class="form-control" placeholder="Введите ссылку">
-                  </div>
-                  <div class="col-auto">
-                      <button type="button" class="btn btn-danger">Удалить</button>
-                      <button type="submit" class="btn btn-primary ms-2">Сохранить</button>
-                  </div>
-              </div>
-          </form>          </div>
-        </div>
-      </div>
-      {% endif %}
+       {% endif %}
     </div>
   </div>
 
